bk_ida/gccida/c3/print_operand_address
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand_address/src/i386.c:6596:17: error: expected expression
if ( *( _OWORD *)&out.base != 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand_address/src/i386.c:6596:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&out.base != 0LL ) 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand_address/src/i386.c:6642:28: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
&& ( v7.rtwint = ( __int64)out.disp->fld[0], *( _WORD *)v7.rtwint == 75) 
                           ^~~~~~~~~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_operand_address/src/obj/i386.o] Error 1
